# cserialize

./: CMakeLists.txt  README.md  Zayavka_na_pershy_etap.docx  serialize.kdev4
.kdev4/: serialize.kdev4
docs/: .~lock.cserialize.docx#  cserialize.docx  cserialize.odt  блок-схема.odg
examples/: CMakeLists.txt
examples/nasted_dup_ptr_struct/: main.c  sfuncs.h  sfuncs.h~  structs.h
examples/nasted_ptr_struct/: main.c  main.c~
source/: serialize.h  serialize.h~
